--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -6,10 +6,14 @@ layout: wide
 ---
 <h1 class='font-size-3xl'>Documentation</h1>
 
-<section class='w-full bg-alternate'>
+<section id='mathlive' class='w-full'>
 
+  <h2 class='font-size-2xl text-center'>MathLive Documentation</h2>
+  <section class='max-w-xl m-auto mb-xl'>
+    <img src='/assets/mathlive-1.png' style='width: 100%; border-radius:16px;
+     border:1px solid white; '>
+  </section>
   <section class='cards col1 max-w-xl m-auto mb-xl'>
-    <h2 class='font-size-2xl text-center'>MathLive Documentation</h2>
 
     <div class="card primary">
       <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true"
@@ -37,11 +41,70 @@ layout: wide
       <i class="fa-3x fal fa-chevron-right navigation"></i>
     </div>
 
+
+<style>
+  dl {
+    margin-left: 1em;
+  }
+
+  dt {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 1em;
+    border-radius: 8px;
+    padding: 8px;
+  }
+
+  dt:hover {
+    background: rgba(0, 0, 0, 0.05)
+  }
+
+  dd {
+    font-style: italic;
+    line-height: 1.1;
+    opacity: .6;
+  }
+
+</style>
+
+    <div class='card'>
+      <div class='copy'>
+        <div class="icon-secondary text-center">
+          <i class="fa-4x fal fa-file-alt"></i>
+        </div>
+        <h3 class='text-center'>Guides</h3>
+        <dl>
+          <dt><a href="/mathlive/guides/introduction">Quick Start</a></dt>
+          <dd>Quick introduction to using MathLive in your project</dd>  
+          <dt><a href="/mathlive/guides/interacting">Interact with a mathfield</a></dt>
+          <dd>Receiving input and changing the value of a mathfield</dd>
+          <dt><a href="/mathlive/guides/customizing">Customize a mathfield</a></dt>
+          <dd>Adapting the behavior and appearance of a mathfield to your needs</dd>
+          <dt><a href="/mathlive/guides/commands">Executing commands</a></dt>
+          <dd>Sending editing commands to a mathfield</dd>
+          <dt><a href="/mathlive/guides/macros">Define custom Latex macros</a></dt>
+          <dd>Extending the Latex commands supported</dd>
+          <dt><a href="/mathlive/guides/shortcuts">Manage inline and keyboard shortcuts</a></dt>
+          <dd>Add or modify editing keyboard shortcuts</dd>
+          <dt><a href="/mathlive/guides/speech">Control speech output</a></dt>
+          <dd>A mathfield can provide speech feedback to interact with it.</dd>
+          <dt><a href="/mathlive/guides/static">Display static math formulas</a></dt>
+          <dd>Display non-editable math formulas in a page</dd>
+          <dt><a href="/mathlive/guides/virtual-keyboards">Define custom virtual keyboards</a></dt>
+          <dd>Virtual (on-screen) keyboards can be customized to your needs</dd>
+
+        </dl>
+      </div>      
+    </div>
   </section>
 
   <section class='cards col1 max-w-xl m-auto mb-xl'>
     <h2 class='font-size-2xl text-center'>MathJSON Documentation</h2>
-    <div class="card primary">
+    <section class='max-w-xl m-auto mb-xl'>
+      <img src='/assets/MathJSON-1.png' style='width: 100%; border-radius:16px;
+       border:1px solid white; '>
+    </section>
+      <div class="card primary">
       <a class="section-link" href="/math-json/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
       <div class="ml-lg mr-lg">
         <i class="fa-4x fad fa-rocket"></i>
@@ -70,7 +133,11 @@ layout: wide
 
   <section class='cards col1 max-w-xl m-auto mb-xl'>
     <h2 class='font-size-2xl text-center'>Compute Engine Documentation</h2>
-    <div class="card primary">
+    <section class='max-w-xl m-auto mb-xl'>
+      <img src='/assets/Compute-Engine-2.png' style='width: 100%; border-radius:16px;
+       border:1px solid white; '>
+    </section>
+      <div class="card primary">
       <a class="section-link" href="/compute-engine/" target="_self" rel="follow" aria-hidden="true"
         tabindex="-1">&nbsp;</a>
       <div class="ml-lg mr-lg">
@@ -105,60 +172,22 @@ layout: wide
 </section>
 
 
-<section class="cards wrap-vertical">
-
-  <div class="card">
-    <a class="section-link" href="/docs/code-of-conduct/" target="_self" rel="follow" aria-hidden="true"
-      tabindex="-1">&nbsp;</a>
-    <div class="icon-secondary">
-      <i class="fa-4x fal fa-file-alt"></i>
-    </div>
+<section class="cards col1">
+  <div class='card'>
     <div class='copy'>
-      <h3>Code of Conduct</h3>
-      <p>The rules, norms and responsibilities you are expected to follow when participating in the project</p>
-      <a href="/docs/code-of-conduct">Learn more<i class=" fas fa-chevron-right navigation"></i></a>
-    </div>
+      <dl>
+        <dt><a href="/docs/code-of-conduct">Code of Conduct</a></dt>
+        <dd>The rules, norms and responsibilities you are expected to follow when participating in the project</dd>
+        <dt><a href="/docs/reporting-issues">Reporting Issues</a></dt>
+        <dd>How to report issues or request new features</dd>
+        <dt><a href="/docs/contributing-code">Reporting Issues</a></dt>
+        <dd>to submit pull requests for bug fixes or new feature</dd>
+        <dt><a href="/docs/coding-style-guide">Coding Style Guide</a></dt>
+        <dd>Coding guidelines used in the project</dd>
+      </dl>
+    </div>      
   </div>
-
-  <div class="card">
-    <a class="section-link" href="/docs/reporting-issues/" target="_self" rel="follow" aria-hidden="true"
-      tabindex="-1">&nbsp;</a>
-    <div class="icon-secondary">
-      <i class="fa-4x fal fa-file-alt"></i>
-    </div>
-    <div class='copy'>
-      <h3>Reporting Issues</h3>
-      <p>How to report issues or request new features</p>
-      <a href="/docs/reporting-issues">Learn more<i class=" fas fa-chevron-right navigation"></i></a>
-    </div>
-  </div>
-
-  <div class="card">
-    <a class="section-link" href="/docs/contributing-code/" target="_self" rel="follow" aria-hidden="true"
-      tabindex="-1">&nbsp;</a>
-    <div class="icon-secondary">
-      <i class="fa-4x fal fa-file-alt"></i>
-    </div>
-    <div class='copy'>
-      <h3>Contributing Code</h3>
-      <p>How to submit pull requests for bug fixes or new feature</p>
-      <a href="/docs/contributing-code">Learn more<i class=" fas fa-chevron-right navigation"></i></a>
-    </div>
-  </div>
-
-  <div class="card">
-    <a class="section-link" href="/docs/coding-style-guide/" target="_self" rel="follow" aria-hidden="true"
-      tabindex="-1">&nbsp;</a>
-    <div class="icon-secondary">
-      <i class="fa-4x fal fa-file-alt"></i>
-    </div>
-    <div class='copy'>
-      <h3>Coding Style Guide</h3>
-      <p>Coding guidelines used in the project</p>
-      <a href="/docs/coding-style-guide">Learn more<i class=" fas fa-chevron-right navigation"></i></a>
-    </div>
-  </div>
-
+  
 </section>
 
 
