feat: improved mobile rendering

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -6,11 +6,10 @@ layout: wide
 ---
 <h1 class='font-size-3xl'>Documentation</h1>
 
-<section id='mathlive' class='w-full'>
+<section id='mathlive' class='w-full '>
 
-  <h2 class='font-size-2xl text-center'>MathLive Documentation</h2>
   <section class='max-w-xl m-auto mb-xl'>
-    <img src='/assets/mathlive-1.png' style='width: 100%; border-radius:16px;
+    <img alt="MathLive Documentation" src='/assets/mathlive-1.png' style='width: 100%; border-radius:16px;
      border:1px solid white; '>
   </section>
   <section class='cards col1 max-w-xl m-auto mb-xl'>
@@ -42,66 +41,43 @@ layout: wide
     </div>
 
 
-<style>
-  dl {
-    margin-left: 1em;
-  }
-
-  dt {
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-top: 1em;
-    border-radius: 8px;
-    padding: 8px;
-  }
-
-  dt:hover {
-    background: rgba(0, 0, 0, 0.05)
-  }
-
-  dd {
-    font-style: italic;
-    line-height: 1.1;
-    opacity: .6;
-  }
-
-</style>
 
     <div class='card'>
       <div class='copy'>
         <div class="icon-secondary text-center">
           <i class="fa-4x fal fa-file-alt"></i>
         </div>
-        <h3 class='text-center'>Guides</h3>
+        <h3 class='text-center'>MathLive Guides</h3>
         <dl>
           <dt><a href="/mathlive/guides/introduction">Quick Start</a></dt>
           <dd>Quick introduction to using MathLive in your project</dd>  
           <dt><a href="/mathlive/guides/interacting">Interact with a mathfield</a></dt>
-          <dd>Receiving input and changing the value of a mathfield</dd>
+          <dd>Receive input and change the value of a mathfield</dd>
           <dt><a href="/mathlive/guides/customizing">Customize a mathfield</a></dt>
-          <dd>Adapting the behavior and appearance of a mathfield to your needs</dd>
+          <dd>Adapt the behavior and appearance of a mathfield to your needs</dd>
           <dt><a href="/mathlive/guides/commands">Executing commands</a></dt>
-          <dd>Sending editing commands to a mathfield</dd>
+          <dd>Send editing commands to a mathfield</dd>
           <dt><a href="/mathlive/guides/macros">Define custom Latex macros</a></dt>
-          <dd>Extending the Latex commands supported</dd>
+          <dd>Extend the Latex commands supported</dd>
           <dt><a href="/mathlive/guides/shortcuts">Manage inline and keyboard shortcuts</a></dt>
           <dd>Add or modify editing keyboard shortcuts</dd>
           <dt><a href="/mathlive/guides/speech">Control speech output</a></dt>
           <dd>A mathfield can provide speech feedback to interact with it.</dd>
           <dt><a href="/mathlive/guides/static">Display static math formulas</a></dt>
-          <dd>Display non-editable math formulas in a page</dd>
+          <dd>Display non-editable math formulas in your page</dd>
           <dt><a href="/mathlive/guides/virtual-keyboards">Define custom virtual keyboards</a></dt>
-          <dd>Virtual (on-screen) keyboards can be customized to your needs</dd>
+          <dd>Customize or create new virtual (on-screen) keyboards</dd>
 
         </dl>
       </div>      
     </div>
   </section>
 
+  <hr>
+
   <section class='cards col1 max-w-xl m-auto mb-xl'>
-    <h2 class='font-size-2xl text-center'>MathJSON Documentation</h2>
     <section class='max-w-xl m-auto mb-xl'>
-      <img src='/assets/MathJSON-1.png' style='width: 100%; border-radius:16px;
+      <img alt="MathJSON Documentation" src='/assets/MathJSON-1.png' style='width: 100%; border-radius:16px;
        border:1px solid white; '>
     </section>
       <div class="card primary">
@@ -131,10 +107,11 @@ layout: wide
 
   </section>
 
+  <hr>
+
   <section class='cards col1 max-w-xl m-auto mb-xl'>
-    <h2 class='font-size-2xl text-center'>Compute Engine Documentation</h2>
     <section class='max-w-xl m-auto mb-xl'>
-      <img src='/assets/Compute-Engine-2.png' style='width: 100%; border-radius:16px;
+      <img alt="Compute Engine Documentation" src='/assets/Compute-Engine-2.png' style='width: 100%; border-radius:16px;
        border:1px solid white; '>
     </section>
       <div class="card primary">
@@ -167,25 +144,25 @@ layout: wide
 
 </section>
 
+<hr>
+
 <section class='max-w-lg w-full'>
-  <h2 class='font-size-2xl text-center'>Other Documentation</h2>
+  <h2 class='font-size-2xl text-center'>Other Documents</h2>
 </section>
 
 
 <section class="cards col1">
   <div class='card'>
-    <div class='copy'>
       <dl>
         <dt><a href="/docs/code-of-conduct">Code of Conduct</a></dt>
         <dd>The rules, norms and responsibilities you are expected to follow when participating in the project</dd>
         <dt><a href="/docs/reporting-issues">Reporting Issues</a></dt>
         <dd>How to report issues or request new features</dd>
-        <dt><a href="/docs/contributing-code">Reporting Issues</a></dt>
+        <dt><a href="/docs/contributing-code">Contributing code</a></dt>
         <dd>to submit pull requests for bug fixes or new feature</dd>
         <dt><a href="/docs/coding-style-guide">Coding Style Guide</a></dt>
         <dd>Coding guidelines used in the project</dd>
       </dl>
-    </div>      
   </div>
   
 </section>
