--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -20,14 +20,14 @@ head:
 </section>
 
 <section class='m-lg mb-xl w-full-lg max-w-2xl'>
-  <h1 style='font-size: 4rem; line-height: 3.5rem'><span style='display: block;
+  <h1 style="font-size: 4rem; line-height: 3.5rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><span style='display: block;
     font-size: 32px;
     margin: 0;
     padding: 0;
     opacity: 0.4;
     line-height: 1;
     letter-spacing: -0.2px;
-'>MathLive</span>A Web Component that Makes Math Input Easy</h1>
+'>MathLive</span>A Web Component for Math Input</h1>
 </section>
 
 
@@ -119,27 +119,29 @@ head:
       <div class="icon-secondary text-center">
         <i class="fa-4x fal fa-file-alt"></i>
       </div>
-      <h3 class='text-center'>Guides</h3>
+      <h3 class='text-center'>MathLive Guides</h3>
       <dl>
         <dt><a href="/mathlive/guides/introduction">Quick Start</a></dt>
         <dd>Quick introduction to using MathLive in your project</dd>  
         <dt><a href="/mathlive/guides/interacting">Interact with a mathfield</a></dt>
-        <dd>Receiving input and changing the value of a mathfield</dd>
+        <dd>Receive input and change the value of a mathfield</dd>
         <dt><a href="/mathlive/guides/customizing">Customize a mathfield</a></dt>
-        <dd>Adapting the behavior and appearance of a mathfield to your needs</dd>
+        <dd>Adapt the behavior and appearance of a mathfield to your needs</dd>
         <dt><a href="/mathlive/guides/commands">Executing commands</a></dt>
-        <dd>Sending editing commands to a mathfield</dd>
+        <dd>Send editing commands to a mathfield</dd>
         <dt><a href="/mathlive/guides/macros">Define custom Latex macros</a></dt>
-        <dd>Extending the Latex commands supported</dd>
+        <dd>Extend the Latex commands supported</dd>
         <dt><a href="/mathlive/guides/shortcuts">Manage inline and keyboard shortcuts</a></dt>
         <dd>Add or modify editing keyboard shortcuts</dd>
         <dt><a href="/mathlive/guides/speech">Control speech output</a></dt>
         <dd>A mathfield can provide speech feedback to interact with it.</dd>
         <dt><a href="/mathlive/guides/static">Display static math formulas</a></dt>
-        <dd>Display non-editable math formulas in a page</dd>
+        <dd>Display non-editable math formulas in your page</dd>
         <dt><a href="/mathlive/guides/virtual-keyboards">Define custom virtual keyboards</a></dt>
-        <dd>Virtual (on-screen) keyboards can be customized to your needs</dd>
+        <dd>Customize or create new virtual (on-screen) keyboards</dd>
+
         <hr>
+
         <dt><a href="/mathlive/guides/mathfield-getting-started">Getting Started</a></dt>
         <dd>Everything you need to know to add a mathfield to your project</dd>  
         <dt><a href="/docs/mathlive">MathLive SDK</a></dt>
