--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,16 @@ title: CortexJS
 read_time: false
 ---
 
-<section>
+<section class="hero">
   <!-- <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1"> -->
-  <div style='position:relative'>
-    <img src='assets/cortex-4.png' style='
-    width: 100vw;
-    height: 512px;
-    object-fit: cover;
-'>
-    <p
-      style='font-size: 48px;font-weight: 900;position: absolute;left: calc(50vw - 280px);bottom:.5em;margin:0;width: 280px;line-height: .92;color: white;'>
-      Web Components for Scientific Computing</p>
+  <div>
+    <img src='assets/cortex-hero.jpg'>
+    <p>Web Components for Scientific Computing</p>
   </div>
   <!-- </a> -->
 </section>
 
-<section id="mathfield" class="fullwidth">
+<section id="mathfield" class="fullwidth light-card">
   <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
   <div class="figure">
     <video autoplay loop muted playinline class='max-w-lg'>
@@ -29,8 +23,9 @@ read_time: false
     </video>
   </div>
   <div class="copy">
-    <h2><span class='eyebrow'>MathLive</span>Math Input Made Easy</h2>
-    <h3>Beautifully typeset math as easy to enter as text</h3>
+    <!-- <h2><span class='eyebrow'>MathLive</span>Math Input Made Easy</h2> -->
+    <h2>MathLive<span class='subhead'>Math Input Made Easy</span></h2>
+    <p>Beautifully typeset math as easy to enter as text</p>
     <p><a href='/mathlive/'>Learn More<span class='ml-sm'><i class="fas fa-chevron-right navigation"></i><span></a></p>
   </div>
 </section>
@@ -38,7 +33,7 @@ read_time: false
 <div class='cards col3'>
   <section id="mathjson" class="card">
     <div class="copy">
-      <h2><span class='eyebrow'>MathJSON</span>The Web Native Format for Math</h2>
+      <h2>MathJSON<span class='subhead'>The Web Native Format for Math</span></h2>
       <h3>A JSON schema to represent math expressions.</h3>
 
       <p><a href='/math-json/'>Learn More<span class='ml-sm'><i class="fas fa-chevron-right navigation"></i><span></a>
@@ -51,7 +46,7 @@ read_time: false
 
   <section id="mathjson" class="card">
     <div class="copy">
-      <h2><span class='eyebrow'>Compute Engine</span>Turbo Math Evaluator</h2>
+      <h2>Compute Engine<span class='subhead'>Turbo Math Evaluator</span></h2>
       <h3>The Compute Engine uses an optimizing compiler to quickly evaluate math expressions.</h3>
       <p><a href='/compute-engine/'>Learn More<span class='ml-sm'><i
               class="fas fa-chevron-right navigation"></i><span></a></p>
@@ -63,7 +58,7 @@ read_time: false
 
   <section id="mathjson" class="card">
     <div class="copy">
-      <h2><span class='eyebrow'>Visual Toolkit</span>Make Scientific Data Visible</h2>
+      <h2>Visual Toolkit<span class='subhead'>Make Scientific Data Visible</span></h2>
       <h3>Visual representations of data can help understanding. The Visual Toolkit helps plot data sets to reveal
         insights hidden in data.</h3>
       <p><strong>Coming soon.</strong></p>
