feat: updated mathlive guides

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -116,38 +116,68 @@ head:
 <section class='cards col1'>
   <div class='card'>
     <div class='copy'>
+
       <div class="icon-secondary text-center">
         <i class="fa-4x fal fa-file-alt"></i>
       </div>
       <h3 class='text-center'>MathLive Guides</h3>
-      <dl>
-        <dt><a href="/mathlive/guides/introduction">Quick Start</a></dt>
-        <dd>Quick introduction to using MathLive in your project</dd>  
-        <dt><a href="/mathlive/guides/interacting">Interact with a mathfield</a></dt>
-        <dd>Receive input and change the value of a mathfield</dd>
-        <dt><a href="/mathlive/guides/customizing">Customize a mathfield</a></dt>
-        <dd>Adapt the behavior and appearance of a mathfield to your needs</dd>
-        <dt><a href="/mathlive/guides/commands">Executing commands</a></dt>
-        <dd>Send editing commands to a mathfield</dd>
-        <dt><a href="/mathlive/guides/macros">Define custom Latex macros</a></dt>
-        <dd>Extend the Latex commands supported</dd>
-        <dt><a href="/mathlive/guides/shortcuts">Manage inline and keyboard shortcuts</a></dt>
-        <dd>Add or modify editing keyboard shortcuts</dd>
-        <dt><a href="/mathlive/guides/speech">Control speech output</a></dt>
-        <dd>A mathfield can provide speech feedback to interact with it.</dd>
-        <dt><a href="/mathlive/guides/static">Display static math formulas</a></dt>
-        <dd>Display non-editable math formulas in your page</dd>
-        <dt><a href="/mathlive/guides/virtual-keyboards">Define custom virtual keyboards</a></dt>
-        <dd>Customize or create new virtual (on-screen) keyboards</dd>
+
+      <div class="link-list">
+
+        <a href="/mathlive/guides/introduction">
+          <h4>Quick Start</h4>
+          <p>Quick introduction to using MathLive in your project</p>
+        </a>
+
+        <a href="/mathlive/guides/interacting">
+          <h4>Interact with a mathfield</h4>
+          <p>Receive input and change the value of a mathfield</p>
+        </a>
+
+        <a href="/mathlive/guides/customizing">
+          <h4>Customize a mathfield</h4>
+          <p>Understand in depth the lifecycle of a MathfieldElement: 
+            construction, interaction with the DOM and when can you communicate 
+            with it</p>
+        </a>
+
+        <a href="/mathlive/guides/lifecycle">
+          <h4>Web Component Lifecycle</h4>
+          <p>Adapt the behavior and appearance of a mathfield to your needs</p>
+        </a>
+
+        <a href="/mathlive/guides/commands">
+          <h4>Executing commands</h4>
+          <p>Send editing commands to a mathfield</p>
+        </a>
+        <a href="/mathlive/guides/macros">
+          <h4>Define custom Latex macros</h4>
+          <p>Extend the Latex commands supported</p>
+        </a>
+        <a href="/mathlive/guides/shortcuts">
+          <h4>Manage inline and keyboard shortcuts</h4>
+          <p>Add or modify editing keyboard shortcuts</p>
+        </a>
+        <a href="/mathlive/guides/speech">
+          <h4>Control speech output</h4>
+          <p>A mathfield can provide speech feedback to interact with it</p>
+        </a>
+        <a href="/mathlive/guides/virtual-keyboards">
+          <h4>Define custom virtual keyboards</h4>
+          <p>Customize or create new virtual (on-screen) keyboards</p>
+        </a>
 
         <hr>
 
-        <dt><a href="/mathlive/guides/mathfield-getting-started">Getting Started</a></dt>
-        <dd>Everything you need to know to add a mathfield to your project</dd>  
-        <dt><a href="/docs/mathlive">MathLive SDK</a></dt>
-        <dd>Reference documentation of the MathLive API</dd>  
-
-      </dl>
+        <a href="/mathlive/guides/mathfield-getting-started">
+          <h4>Getting Started</h4>
+          <p>Everything you need to know to add a mathfield to your project</p>
+        </a>
+        <a href="/docs/mathlive">
+          <h4>MathLive SDK</h4>
+          <p>Reference documentation of the MathLive API</p>
+        </a>
+      </div>
     </div>      
   </div>
 
