--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@ read_time: false
   <!-- <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1"> -->
   <div>
     <img src='assets/cortex-hero.jpg'>
-    <p>Web Components for Scientific Computing</p>
+    <p style='max-width:480px'>Web Components for Scientific Computing</p>
   </div>
   <!-- </a> -->
 </section>
