doc: added "static" guide to TOC

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -90,6 +90,10 @@ layout: wide
               <h4>Control speech output</h4>
               <p>A mathfield can provide speech feedback to interact with it</p>
             </a>
+            <a href="/mathlive/guides/static">
+              <h4>Render static math formulas</h4>
+              <p>Render non-interactive or read-only formulas in a page</p>
+            </a>
             <a href="/mathlive/guides/virtual-keyboards">
               <h4>Define custom virtual keyboards</h4>
               <p>Customize or create new virtual (on-screen) keyboards</p>
