--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -35,7 +35,7 @@ head:
   <code-playground layout="stack" class="m-lg w-full-lg">
     <script>
       moduleMap = {
-        mathlive: "//unpkg.com/mathlive/dist/mathlive.mjs",
+        mathlive: "//unpkg.com/mathlive/dist/mathlive.min.mjs",
       };
     </script>
     <div slot="html">&lt;script src="//unpkg.com/mathlive/dist/mathlive.min.js"&gt;&lt;/script&gt;
@@ -161,6 +161,10 @@ head:
         <a href="/mathlive/guides/speech">
           <h4>Control speech output</h4>
           <p>A mathfield can provide speech feedback to interact with it</p>
+        </a>
+        <a href="/mathlive/guides/static">
+          <h4>Render static math formulas</h4>
+          <p>Render non-interactive or read-only formulas in a page</p>
         </a>
         <a href="/mathlive/guides/virtual-keyboards">
           <h4>Define custom virtual keyboards</h4>
