docs: added command and keybindings reference

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -40,6 +40,31 @@ layout: wide
       <i class="fa-3x fal fa-chevron-right navigation"></i>
     </div>
 
+    <div class="card">
+      <a class="section-link" href="/mathlive/reference/commands" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-pencil"></i>
+      </div>
+      <div class="copy">
+        <h3>Supported Commands</h3>
+        <p>The list of 800+ LaTeX commands supported by MathLive</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
+
+    <div class="card">
+      <a class="section-link" href="/mathlive/reference/keybindings" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-pencil"></i>
+      </div>
+      <div class="copy">
+        <h3>Keyboard Shortcuts</h3>
+        <p>Keyboard shortcuts can help speed up input of formulas</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
 
 
       <div class='card'>
