--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -33,13 +33,8 @@ head:
 
 <section class='m-lg mb-xl w-full-lg max-w-2xl'>
   <code-playground layout="stack" class="m-lg w-full-lg">
-    <script>
-      moduleMap = {
-        mathlive: "//unpkg.com/mathlive/dist/mathlive.min.mjs",
-      };
-    </script>
     <div slot="html">&lt;script src="//unpkg.com/mathlive/dist/mathlive.min.js"&gt;&lt;/script&gt;
-&lt;math-field&gt;
+&lt;math-field virtual-keyboard-mode=manual&gt;
   x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}
 &lt;/math-field&gt;</div>
   </code-playground>
