fix: fix broken grok

--- a/src/_pages/funding.html
+++ b/src/_pages/funding.html
@@ -35,7 +35,7 @@ layout: single
 
     <p>
       If you are not ready to make a financial contribution, starring the
-      project in GitHub (<a href="https://github.com/cortex-js/math-json">here</a> 
+      project in GitHub (<a href="https://github.com/cortex-js/compute-engine">here</a> 
       or <a href="https://github.com/arnog/mathlive">here</a>), 
       promoting the project on social media or sending a
       quick thank you is always very much appreciated.
