--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -5,416 +5,253 @@ layout: single
 date: Last Modified
 sidebar:
     - nav: "compute-engine"
+head:
+  stylesheets:
+    - https://unpkg.com/mathlive/dist/mathlive-static.css
 ---
 
-  <style>
-/* body {
-  margin: 0;
-}
-
-html {
-  fill: currentColor;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
-  height: 100%;
-  width: 100%;
-}
- */
-body {
-  --hue: 210;
-  --on-primary: hsl(var(--hue), 0%, 100%);
-  --primary: hsl(var(--hue), 40%, 31%);
-  --surface: #fafafa;
-  --surface-border: #fff;
-  --on-surface: hsl(var(--hue), 19%, 26%);
-
-  --secondary-surface: hsl(0, 0%, 99.5%);
-  --secondary-surface-border: hsl(0, 0%, 93%);
-  --link: hsl(var(--hue), 100%, 40%);
-
-  --editable: #fff;
-  --editable-border: #ddd;
-  --on-editable: #333;
-
-  /* background: var(--surface);
-  color: var(--on-surface); */
-}
-
-h2 {
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 0.7;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  border: none;
-}
-h3 {
-  font-weight: 600;
-  line-height: 0.7;
-  margin-top: 3em;
-  margin-bottom: 2em;
-}
-
-h4 {
-  margin-top: 2em;
-  margin-bottom: 1.5em;
-}
-
-h3 strong,
-h4 strong {
-  color: var(--primary);
-}
-
-h4 {
-  font-weight: 400;
-}
-/* h2, h3 {
-    background: linear-gradient(#eee, #333);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-} */
-main {
-  padding-top: 3rem;
-  width: 640px;
-  max-width: 100vw;
-  display: flex;
-  align-items: flex-start;
-  flex-flow: column wrap;
-  margin: auto;
-}
-main > div {
-  width: 100%;
-}
-
-main > div.frame {
-  margin-top: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
-  width: calc(100% - 2em);
-  margin-bottom: 4em;
-  background: var(--secondary-surface);
-  border: 1px solid var(--secondary-surface-border);
-  border-radius: 8px;
-}
-
-kbd {
-  font-family: 'IBM Plex mono', 'Source Code Pro', Menlo,
-    'Bitstream Vera Sans Mono', Monaco, Courier, 'Andale Mono', monospace;
-  background: #f4f4f4;
-  color: #333;
-  padding: 1px 5px;
-  border-radius: 5px;
-}
-
-.links {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 1em;
-  padding-bottom: 2em;
-  width: 100%;
-  font-size: 24px;
-}
-@media (max-width: 512px) {
-  .links {
-    font-size: 16px;
-  }
-}
-
-.output {
-  font-family: 'IBM Plex mono', 'Source Code Pro', Menlo,
-    'Bitstream Vera Sans Mono', Monaco, Courier, 'Andale Mono', monospace;
-  color: #f0c674;
-
-  background: #35434e;
-
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border-radius: 5px;
-  border: 1px solid #333;
-
-  min-height: 1em;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-
-  word-break: break-word;
-  white-space: pre-wrap;
-}
-
-.mathfield {
-  border: 1px solid var(--editable-border);
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border-radius: 5px;
-  background: var(--editable);
-  color: var(--on-editable);
-}
-
-.fa-w-24 {
-  width: 24px;
-  vertical-align: -5px;
-}
-
-a,
-a:visited,
-a:active {
-  text-decoration: none;
-  color: var(--link);
-  border-radius: 1em;
-  border: 1px solid transparent;
-}
-
-.links a {
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-.links a:visited:hover,
-.links a:hover {
-  border: 1px solid var(--secondary-surface-border);
-  background: var(--surface);
-}
-
-a:hover {
-  text-decoration: underline;
-}
-.links a:hover {
-  text-decoration: none;
-}
-
-body > header {
-  background-color: var(--primary);
-  height: 130px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  /* box-shadow: 16px 6px 24px rgba(0, 0, 0, 0.2); */
-}
-
-header h1 {
-  /* font-size: 3rem; */
-  color: var(--on-primary);
-  /* text-transform: uppercase; */
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1024px;
-  letter-spacing: -0.04ex;
-  text-rendering: optimizeLegibility;
-  line-height: 0.9;
-  width: 640px;
-  text-align: left;
-  font-weight: 700;
-  letter-spacing: 0.004em;
-  margin: auto;
-}
-
-footer {
-  margin-top: 5em;
-  margin-bottom: 5em;
-  text-align: center;
-
-  display: flex;
-  justify-content: center;
-  flex-flow: column wrap;
-}
-
-footer a,
-footer a:visited,
-footer a:active {
-  font-size: 18px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-}
-
-@media only screen and (max-width: 512px) {
-  header {
-    height: 100px;
-  }
-
-  header h1 {
-    max-width: 320px;
-    width: auto;
-    font-size: 2rem;
-  }
-
-  .examples {
-    width: 320px;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
+<style>
   body {
-    --surface: hsl(var(--hue), 19%, 26%);
-    --surface-border: hsl(0, 0%, 20%);
-    --on-surface: hsl(0, 0%, 98%);
-    --primary: hsl(var(--hue), 100%, 50%);
+    --hue: 210;
+    --on-primary: hsl(var(--hue), 0%, 100%);
+    --primary: hsl(var(--hue), 40%, 31%);
+    --surface: #fafafa;
+    --surface-border: #fff;
+    --on-surface: hsl(var(--hue), 19%, 26%);
 
-    --secondary-surface: hsl(0, 0%, 19%, 0.3);
-    --secondary-surface-border: hsl(0, 0%, 22%);
-    --link: hsl(var(--hue), 100%, 63%);
+    --secondary-surface: hsl(0, 0%, 99.5%);
+    --secondary-surface-border: hsl(0, 0%, 93%);
+    --link: hsl(var(--hue), 100%, 40%);
 
-    --editable: #333;
-    --editable-border: hsl(0, 0%, 13%);
-    --on-editable: #fff;
-  }
-  h2,
-  h3 {
-    color: hsl(var(--hue), 20%, 90%);
-  }
-}
-
-:root {
-      /* --primary: #0066ce; */
-      --primary-light: #86a8cb;
+    --editable: #fff;
+    --editable-border: #ddd;
+    --on-editable: #333;
+    --primary-light: #86a8cb;
       --monospace: 'JetBrains Mono', 'IBM Plex Mono', 'Source Code Pro', Menlo,
           Monaco, 'Courier New', monospace;
-      --system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
-    }
-    code {
-      white-space: pre-wrap;
-    }
+    --system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+      'Helvetica Neue', sans-serif;
+  }
 
-    h2 {
-      font-size: 1em;
-      padding: 0;
-      margin: 0;
-      color: #666;
-    }
+  @media (prefers-color-scheme: dark) {
+    body {
+      --surface: hsl(var(--hue), 19%, 26%);
+      --surface-border: hsl(0, 0%, 20%);
+      --on-surface: hsl(0, 0%, 98%);
+      --primary: hsl(var(--hue), 100%, 50%);
 
-    h2 code {
-      font-family: var(--monospace);
-      font-size: 1em;
-    }
+      --secondary-surface: hsl(0, 0%, 19%, 0.3);
+      --secondary-surface-border: hsl(0, 0%, 22%);
+      --link: hsl(var(--hue), 100%, 63%);
 
-    .latex {
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-      background: #fdfdfd;
-      width: 100%;
-      margin-right: .5em;
+      --editable: #333;
+      --editable-border: hsl(0, 0%, 13%);
+      --on-editable: #fff;
     }
+  }
 
-    /* Wrap mathlive content */
-    .latex .ML__mathlive {
-      display: inline;
-      overflow-wrap: break-word;
-    }
+  main {
+    display: flex;
+    align-items: flex-start;
+    flex-flow: column wrap;
+    margin: auto;
+  }
+  main > div {
+    width: 100%;
+  }
 
-    .latex .ML__mathlive .ML__base {
-      display: inline;
-      white-space: normal;
-    }
+  main > div.frame {
+    margin-top: 2em;
+    padding-left: 1em;
+    padding-right: 1em;
+    width: calc(100% - 2em);
+    margin-bottom: 4em;
+    background: var(--secondary-surface);
+    border: 1px solid var(--secondary-surface-border);
+    border-radius: 8px;
+  }
+
+  kbd {
+    font-family: var(--monospace);
+    background: #f4f4f4;
+    color: #333;
+    padding: 1px 5px;
+    border-radius: 5px;
+  }
+
+  .output {
+    font-family: var(--monospace);
+    color: #f0c674;
+
+    background: #35434e;
+
+    padding: 5px;
+    margin: 10px 0 10px 0;
+    border-radius: 5px;
+    border: 1px solid #333;
+
+    min-height: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+
+    word-break: break-word;
+    white-space: pre-wrap;
+  }
+
+  .mathfield {
+    border: 1px solid var(--editable-border);
+    padding: 5px;
+    margin: 10px 0 10px 0;
+    border-radius: 5px;
+    background: var(--editable);
+    color: var(--on-editable);
+  }
+
+  .fa-w-24 {
+    width: 24px;
+    vertical-align: -5px;
+  }
+  code {
+    white-space: pre-wrap;
+  }
+
+  h2 {
+    font-size: 1em;
+    padding: 0;
+    margin: 0;
+    color: #666;
+  }
+
+  h2 code {
+    font-family: var(--monospace);
+    font-size: 1em;
+  }
+
+  .latex {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    background: #fdfdfd;
+    width: 100%;
+    margin-right: .5em;
+  }
+
+  /* Wrap mathlive content */
+  .latex .ML__mathlive {
+    display: inline;
+    overflow-wrap: break-word;
+  }
+
+  .latex .ML__mathlive .ML__base {
+    display: inline;
+    white-space: normal;
+  }
 
 
-    #mf { width: 100% }
+  #mf { width: 100% }
 
-    #input-label {
-      min-width: fit-content; 
-      margin-right: .5em;
-    }
+  #input-label {
+    min-width: fit-content; 
+    margin-right: .5em;
+  }
 
-    #assumptions ul {
-      padding-top: .25em;
-      border-left: 1px solid #333;
-      padding-left: 1em;
-      margin-bottom: 3em;
-    }
+  #assumptions ul {
+    padding-top: .25em;
+    border-left: 1px solid #333;
+    padding-left: 1em;
+    margin-bottom: 3em;
+  }
 
-    #assumptions ul li {
-      list-style: none;
-      margin-bottom: 1em;
-    }
+  #assumptions ul li {
+    list-style: none;
+    margin-bottom: 1em;
+  }
 
-    button.toggle {
-      appearance: none;
-      border: none;
-      background: none;
-      border-radius: 4px;
-      width: 36px;
-      height: 36px;
-      color: #777;
-    }
-    button.toggle:hover, button.toggle:active {
-      background: #dadada;
-      color: #000;
-    } 
-    button.toggle.is-on {
-      color: #fff;
-      background: var(--primary);
-    }
-    button.toggle svg {
-      width: 24px;
-      height: 24px;
-    }
+  button.toggle {
+    appearance: none;
+    border: none;
+    background: none;
+    border-radius: 4px;
+    width: 36px;
+    height: 36px;
+    color: #777;
+  }
+  button.toggle:hover, button.toggle:active {
+    background: #dadada;
+    color: #000;
+  } 
+  button.toggle.is-on {
+    color: #fff;
+    background: var(--primary);
+  }
+  button.toggle svg {
+    width: 24px;
+    height: 24px;
+  }
 
-    .row {
-      margin-top: .5em;
-      display: inline-flex;
-      align-items: center;
-      width: 100%;
-    }
+  .row {
+    margin-top: .5em;
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+  }
 
-    .output-section.is-visible { display: block; }
-    .output-section { display: none; margin-bottom: 1em;} 
-    .output-section.is-visible .mathjson {
-      display: none;
-    }
-    .output-section.is-visible .mathjson.is-visible {
-      display: block;
-    }
+  .output-section.is-visible { display: block; }
+  .output-section { display: none; margin-bottom: 1em;} 
+  .output-section.is-visible .mathjson {
+    display: none;
+  }
+  .output-section.is-visible .mathjson.is-visible {
+    display: block;
+  }
 
-    .segmented-control {
-      display: flex;
-      width: 100%;
-      margin: 0 auto;
-      font-size: 1rem;
-      font-family: var(--system);
-      font-weight: 600;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      background: #eee;
-      padding: 4px;
-    }
+  .segmented-control {
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    font-size: 1rem;
+    font-family: var(--system);
+    font-weight: 600;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background: #eee;
+    padding: 4px;
+  }
 
-    .segmented-control > input {
-      display: none;
-    }
-    .segmented-control > input:checked + label {
-      background: var(--primary);
-      color: #fff;
-      border-radius: 8px;
-    }
+  .segmented-control > input {
+    display: none;
+  }
+  .segmented-control > input:checked + label {
+    background: var(--primary);
+    color: #fff;
+    border-radius: 8px;
+  }
 
-    .segmented-control label {
-      flex: 1;
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      cursor: pointer;
-      user-select: none;
-      border-radius: 8px;
+  .segmented-control label {
+    flex: 1;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    user-select: none;
+    border-radius: 8px;
 
-      padding: 8px 0;
-      transition: all 250ms cubic-bezier(0,.95,.38,.98);
+    padding: 8px 0;
+    transition: all 250ms cubic-bezier(0,.95,.38,.98);
 
-      width : calc(100% / var(--segments));
-      margin-left: 2px;
-    }
-    .segmented-control label:first {
-      margin-left: 0;
-    }
-    .segmented-control label:hover {
-      background: #dadada;
-    }
+    width : calc(100% / var(--segments));
+    margin-left: 2px;
+  }
+  .segmented-control label:first {
+    margin-left: 0;
+  }
+  .segmented-control label:hover {
+    background: #dadada;
+  }
 
-  </style>
+</style>
 
   <svg xmlns="http://www.w3.org/2000/svg" style='display:none'>
   <defs>
@@ -423,13 +260,11 @@ footer a:active {
     </defs>
   </svg>
 
-  <header>
-    <h1>Cortex Compute Engine REPL</h1>
-  </header>
+  <h1>CortexJS Compute Engine Demo</h1>
 
   <main id="main" class="container">
     <div class='row'>
-      <div id='input-label'>a = </div>
+      <div id='input-label'>f = </div>
       <math-field id="mf" class="mathfield" tabindex="0" virtual-keyboard-mode="manual">
         <!-- 2+3.001 -->
         x e^{i\pi}
@@ -518,7 +353,7 @@ footer a:active {
     </div> -->
 
     <div class="output-section" id="json-form">
-      <h2><code>format(a, ['json'])</code></code></h2>
+      <h2><code>format(f, ['json'])</code></code></h2>
       <div class='row'>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
@@ -527,7 +362,7 @@ footer a:active {
     </div>
 
     <div class="output-section" id="canonical-form">
-      <h2><code>canonical(a)</code></h2>
+      <h2><code>canonical(f)</code></h2>
       <div class='row'>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
@@ -536,7 +371,7 @@ footer a:active {
     </div>
 
     <div class="output-section" id="domain">
-      <h2><code>domain(a)</code></h2>
+      <h2><code>domain(f)</code></h2>
       <div class='row'>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
@@ -546,7 +381,7 @@ footer a:active {
 
 
     <div class="output-section" id="simplify">
-      <h2><code>simplify(a)</code></h2>
+      <h2><code>simplify(f)</code></h2>
       <div class='row'>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
@@ -556,7 +391,7 @@ footer a:active {
 
 
     <div class="output-section" id="evaluate-numerically">
-      <h2><code>N(a)</code></h2>
+      <h2><code>N(f)</code></h2>
       <div class='row'>
         <div class="segmented-control" style="--segments: 4">
           <input type="radio" name="numeric-format" value="auto" id="numeric-format-auto" checked />
@@ -577,7 +412,7 @@ footer a:active {
     </div>
 
     <div class="output-section" id="evaluate">
-      <h2><code>evaluate(a)</code></h2>
+      <h2><code>evaluate(f)</code></h2>
       <div class='row'>
         <div class="latex"></div>
         <button class='toggle'><svg><use xlink:href='#info-circle' /></svg></button>
@@ -592,7 +427,7 @@ footer a:active {
       'https://unpkg.com/mathlive/dist/mathlive.min.mjs';
     import {
       LatexSyntax, parse, serialize, ComputeEngine, match 
-    } from 'https://unpkg.com/@cortex-js/compute-engine';
+    } from 'https://unpkg.com/@cortex-js/compute-engine/dist/compute-engine.esm.js';
 
     const MAX_LINE_LENGTH = 64;
 
