--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@ read_time: false
 
 </div>
 
-<script type='module'>
+<script defer type='module'>
     import {renderMathInDocument} from '//unpkg.com/mathlive/dist/mathlive.min.mjs';
     renderMathInDocument({ 
       renderAccessibleContent: false,
