doc: updated About Us page as per Kenny's feedback

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -3,42 +3,43 @@ title: About Us
 permalink: /about/
 read_time: false
 layout: single
+date: 2021-06-24
 ---
 <section>
 <h1 class="font-size-2xl">About Us</h1>
-<div class='hero-container'>
-<h2>Arno Gourdol</h2>
+<div class='hero-container' style='float:right'>
 <picture class='hero'>
-  <source srcset="../assets/images/arno-cover_2x.jpg" media="only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)">
-  <img src="../assets/images/arno-cover.jpg" alt="Portrait of Arno">
+  <img src="../assets/images/arno-memoji-coding.jpeg" alt="Portrait of Arno">
 </picture>
 </div>
 
 <div class='max-w-4xl mt-lg'>
 
-<p>Hi!</p>
-<p> I’m Arno and I’ve always been interested in typography and in math as a
-     language. At the intersection of science and art, I have crafted MathLive: 
-     math input made easy.
+<p><strong>Hello!</strong></p>
+
+<p>I built my first commercial app for the Mac in 1984. WinMath was one of the first 
+  graphing calculator for modern computers.</p>
+
+<p>After that my professional career took lots of
+  interesting twists and turns: I worked at Apple for 10 years bringing the 
+  Mac OS X UI to life, then at Adobe building tools for creative professionals.</p>
+
+<p>Now I'm applying everything I've learned and returning where it all began: 
+  with CortexJS I'm building a suite of modern tools for scientific computing,
+  including <a href="/mathLive/">MathLive</a>, a web component for beautifully 
+  typeset math equations 
+  and the <a href="/compute-engine/">Compute Engine</a> to perform symbolic computing and numerical 
+  evaluations in JavaScript environments.
 </p>
 
-<p>When you type a formula, MathLive will typeset it beautifully, as TeX would 
-    have and generate the LaTeX and MathML markup for it</p>
+<p>All the Cortex components are available under an Open Source license.</p>
 
-<p>MathLive is a Javascript library that implements the TeX layout algorithms 
-using modern HTML/CSS. It implements a large set 
-of LaTeX commands, including some popular extensions used by MathJAX. 
-It is tested on all modern browsers, on both desktop and mobile devices. 
-It has a rich API that allows extensive customization and extensibility. 
-You can find out more in the MathLive Usage Guide.</p>
+<p>I can’t wait to see what you will do with them. Enjoy!</p>
 
-<p>I can’t wait to see what you will do with it. Enjoy!</p>
-
-
-<p>—Arno<br>
+<p>—Arno Gourdol<br>
 <a href='https://www.linkedin.com/in/arnog'><i class="fab fa-linkedin"></i></a>
 <a href='https://www.instagram.com/arnog'><i class="fab fa-instagram"></i></a>
-<a href='mailto:arno@cortexjs.io'><i class="far fa-envelope"></i></i></a>
+<a href='mailto:arno@arno.org'><i class="far fa-envelope"></i></i></a>
 </p>
 
 </div>
