--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -116,11 +116,12 @@ head:
     white-space: pre-wrap;
   }
 
-  h2 {
+  .page__content h2 {
     font-size: 1em;
     padding: 0;
     margin: 0;
     color: #666;
+    border: none;
   }
 
   h2 code {
@@ -135,19 +136,9 @@ head:
     background: #fdfdfd;
     width: 100%;
     margin-right: .5em;
+    overflow-x: auto;
+    overflow-x: overlay;
   }
-
-  /* Wrap mathlive content */
-  .latex .ML__mathlive {
-    display: inline;
-    overflow-wrap: break-word;
-  }
-
-  .latex .ML__mathlive .ML__base {
-    display: inline;
-    white-space: normal;
-  }
-
 
   #mf { width: 100% }
 
